--- a/Core/Pages/MainPage.xaml
+++ b/Core/Pages/MainPage.xaml
@@ -20,7 +20,7 @@ xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.MainPage">
                 <Label Text="{Binding LastName}" VerticalOptions="Center"
                                         Font="Medium" />
 
-                <Button HorizontalOptions="EndAndExpand" WidthRequest="100" Text="Chat"></Button>
+                <Button HorizontalOptions="EndAndExpand" WidthRequest="100" Clicked="OnButtonClicked" CommandParameter="{Binding Id}" Text="Chat"></Button>
 
               </StackLayout>
             </ViewCell.View>
