--- a/Core/Pages/DirectoryPage.xaml
+++ b/Core/Pages/DirectoryPage.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.MainPage">
+xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.DirectoryPage">
 	
 <StackLayout>
    <Label Text="{Binding Message}" Font="Bold, Large" HorizontalOptions="Center" />
@@ -30,4 +30,4 @@ xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.MainPage">
 
     </ListView>
 	</StackLayout>
-</ContentPage>
+</ContentPage>	
