--- a/Core/Pages/DirectoryPage.xaml
+++ b/Core/Pages/DirectoryPage.xaml
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.DirectoryPage">
+xmlns:local="clr-namespace:Core;assembly=Core" x:Class="Core.DirectoryPage" Title="Directory">
 	
 <StackLayout>
-   <Label Text="{Binding Message}" Font="Bold, Large" HorizontalOptions="Center" />
 	 <ListView ItemsSource="{Binding People}">
       <ListView.ItemTemplate>
         <DataTemplate>
